--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <h2>Login</h2>
             <form action="login.php" method="POST">
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="Username" required>
 
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="Password" required>
 
                 <button type="submit">Login</button>
             </form>
@@ -38,16 +38,16 @@
                 <input type="hidden" name="studentid" value="AUTO_GENERATED_ID">
 
                 <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" required>
+                <input type="text" id="name" name="Name" required>
 
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="UserName" required>
 
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="Password" required>
 
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="Email" required>
 
                 <button type="submit">Create Account</button>
             </form>
