main page add whitespace, pictures, and color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Flashcard App - Login / Create Account</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS for styling -->
 </head>
-<body>
+<body id="body-login">
     <div class="container">
         <!-- Welcome Message -->
         <h1>Welcome to SCOPE</h1>
